apps/tpi-1/overseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  namespace: default
  labels:
    homelab.wahoo.li/exposure: public
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "overseerr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: overseerr
      port: 5055
